apps/opengist/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opengist
  namespace: opengist
  labels:
    app.kubernetes.io/name: opengist
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik.lab.paultibbetts.uk"
    gethomepage.dev/href: "https://opengist.lab.paultibbetts.uk"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Gists
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: opengist.png
    gethomepage.dev/name: Opengist
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`opengist.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: opengist
          port: http
  tls:
    secretName: opengist-tls
